frontend-nodeport.yaml
apiVersion: v1
kind: Service
metadata:
  name: frontend-external
  namespace: default
  labels:
    app: frontend
spec:
  type: NodePort
  selector:
    io.kompose.service: frontend
  ports:
    - name: http
      protocol: TCP
      port: 3000
      targetPort: 3000
      nodePort: 30000
---
apiVersion: v1
kind: Service
metadata:
  name: gateway-external
  namespace: default
  labels:
    app: gateway
spec:
  type: NodePort
  selector:
    io.kompose.service: gateway
  ports:
    - name: http
      protocol: TCP
      port: 8000
      targetPort: 8000
      nodePort: 30800
